objects/Decision_Streets_Project__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Decision Streets Projects</relationshipLabel>
        <relationshipName>Decision_Streets_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Duration_Months__c</fullName>
        <formula>MONTH(Project_End_Date__c) - MONTH( Project_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Duration (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Total_Act_Forecasted__c</fullName>
        <label>Contract Total (Act + Forecasted)</label>
        <summarizedField>monthly_Components__c.Total_Monthly_Billable__c</summarizedField>
        <summaryForeignKey>monthly_Components__c.Decision_Streets_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Completion__c</fullName>
        <formula>Total_Monthly_Billable_Act__c /  Contract_Total_Act_Forecasted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Completion %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <description>Contractor Managing the Project</description>
        <label>Project Manager</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Yet Started</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projected_Contract_Total__c</fullName>
        <label>Projected Contract Total</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Billable_Act__c</fullName>
        <label>Total Monthly Billable Actual Only</label>
        <summarizedField>monthly_Components__c.Total_Monthly_Billable__c</summarizedField>
        <summaryFilterItems>
            <field>monthly_Components__c.Component_Status__c</field>
            <operation>equals</operation>
            <value>Actual</value>
        </summaryFilterItems>
        <summaryForeignKey>monthly_Components__c.Decision_Streets_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Decision Streets Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision Streets Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>